--- a/js.html
+++ b/js.html
@@ -675,9 +675,9 @@
             //위의 예제에서 SW은 key(index)가 되고, 10은 value(index의 값)가 된다. 아래는 객체를 만드는 다른 방법이다.
 
             var grades = {};
-            grades['egoing'] = 10;
-            grades['k8805'] = 6;
-            grades['sorialgi'] = 80;
+            grades['SW'] = 10;
+            grades['AN'] = 6;
+            grades['IS'] = 80;
 
             //아래와 같은 방법으로 객체를 만들수도 있다.
 
